<resources>
    <string name="app_name">Login UI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="background">background</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_in_with">Or Sign In with</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="social">social icon</string>
    <string name="email">Email</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="sign_up_with">Or Sign Up With</string>
    <string name="have_account">I\'ve got an account already?</string>
    <string name="go">GO!</string>
    <string name="simsleev">SIMSLEEV</string>
    <string name="having_issues">Having Issues?</string>
    <string name="are_you_a_newbie">Are you a newbie?</string>
    <string name="i_am_already_a_member">I am already a member</string>

    <string-array name="login_titles">
        <item>SIMSLEEV Dark</item>
        <item>Curved Pink UI</item>
    </string-array>
</resources>
