<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".logintwo.fragment.LoginFragment"
    android:background="#fff">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/shape"
        android:fitsSystemWindows="false"
        android:scaleType="centerCrop"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/background" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_group_152"
        android:layout_centerHorizontal="true"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/form"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#fff"
        android:layout_below="@id/logo"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/logo" />
            <EditText
                android:inputType="text"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_border"
                android:gravity="center"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginBottom="15dp"
                tools:ignore="Autofill" />
            <EditText
                android:inputType="text"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_border"
                android:gravity="center"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginBottom="15dp"
                tools:ignore="Autofill" />
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/button_bg"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_in"/>
            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/or_sign_in_with"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:padding="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="20dp"
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="8dp"
                    android:background="#fff"
                    android:src="@drawable/ic_facebook"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/social" />

                <ImageButton
                    android:padding="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:background="#fff"
                    android:src="@drawable/ic_twitter"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageButton"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton2"
                    android:contentDescription="@string/social" />

                <ImageButton
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:padding="8dp"
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:background="#fff"
                    android:src="@drawable/ic_google_plus"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/social" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp">
        <TextView
            android:padding="5dp"
            android:textSize="18sp"
            android:id="@+id/text_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"/>
        <com.google.android.material.button.MaterialButton
            android:textAllCaps="false"
            android:textSize="18sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"/>
    </LinearLayout>
</RelativeLayout>