<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_1_bg"
    tools:context="com.xheghun.loginui.login_one.fragment.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/login_1_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/segoe_ui_bold_italic"
        android:gravity="center"
        android:text="@string/simsleev"
        android:textColor="@color/colorBlue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/username"
            android:textColorHint="@color/colorWhite"
            app:hintTextAppearance="@style/text_fields">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/text_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_login_1_avatar"
                android:padding="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/text_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_login_1_locked"
                android:padding="20dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Material Design Shape System is still under thorough
        development as the time of writing this code, so it's best if you
         leave the button without cut edges -->

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:elevation="10dp"
            android:fontFamily="@font/segoe_ui_bold_italic"
            android:padding="15dp"
            android:text="@string/go"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorBlue"
            app:cornerRadius="0dp"
            tools:targetApi="lollipop" />

        <com.google.android.material.button.MaterialButton
            style="@style/text_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/having_issues"
            android:textAllCaps="false" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_italic"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/are_you_a_newbie"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            style="@style/text_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold_italic"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorBlue" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
